Updates .gitignore to ignore Pydev IDE for eclipse
Ignores Eclipse files as well

--- a/.gitignore
+++ b/.gitignore
@@ -137,3 +137,11 @@ $RECYCLE.BIN/
 
 # Windows shortcuts
 *.lnk
+
+
+# Eclipse Core
+*.project
+
+# PyDev specific (Python IDE for Eclipse)
+*.pydevproject
+*.metadata
